--- a/index.html
+++ b/index.html
@@ -47,6 +47,12 @@
             </button>
         </div>
 
+        <div class="control">
+            <button class="button" id="btn-heal">
+                Heal
+            </button>
+        </div>
+
         <div class="pokemon enemy">
             <span class="lvl">Lv. 1</span>
 
