--- a/index.html
+++ b/index.html
@@ -45,10 +45,7 @@
         </div>
 
         <div class="control">
-            <div  id="attackPlayers1">
-            </div>
-            <div  id="attackPlayers2">
-            </div>
+        
         </div>
 
         <div class="pokemon player2">
@@ -74,6 +71,7 @@
           </div>
         </div>
       </div>
+      <h3>Chronicle</h3>
     </div>
     <div class="catch_screen"></div>
 
